--- a/GDEV_Thesis_RTS (2_5D)/Assembly-CSharp.csproj
+++ b/GDEV_Thesis_RTS (2_5D)/Assembly-CSharp.csproj
@@ -74,9 +74,11 @@
     <Compile Include="Assets\Scripts\SectorScripts\sectorManager.cs" />
     <Compile Include="Assets\QuickOutline\Scripts\Outline.cs" />
     <Compile Include="Assets\Scripts\GeneralUnitScripts\UnitOutline.cs" />
+    <Compile Include="Assets\Scripts\PlayerScripts\devToolScript.cs" />
     <Compile Include="Assets\RTS_Camera\Scripts\RTS_Camera.cs" />
     <Compile Include="Assets\Scripts\PlayerScripts\ResourceCollection.cs" />
     <Compile Include="Assets\AOSFogWar\Examples\csFogVisibilityAgent.cs" />
+    <Compile Include="Assets\Scripts\PlayerScripts\MinimapManager.cs" />
     <Compile Include="Assets\AOSFogWar\Examples\csRevealerSpawner.cs" />
   </ItemGroup>
   <ItemGroup>
