--- a/GDEV_Thesis_RTS (2_5D)/Assembly-CSharp.csproj
+++ b/GDEV_Thesis_RTS (2_5D)/Assembly-CSharp.csproj
@@ -59,7 +59,7 @@
     <UnityVersion>2022.3.34f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Users\jpcar\.vscode\extensions\visualstudiotoolsforunity.vstuc-1.0.3\Analyzers\Microsoft.Unity.Analyzers.dll" />
+    <Analyzer Include="C:\Users\jpcar\.vscode\extensions\visualstudiotoolsforunity.vstuc-1.0.4\Analyzers\Microsoft.Unity.Analyzers.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.34f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.SourceGenerators.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.34f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
@@ -69,10 +69,13 @@
     <Compile Include="Assets\Scripts\GeneralUnitScripts\UnitVisibility.cs" />
     <Compile Include="Assets\Scripts\GeneralUnitScripts\UnitBehavior.cs" />
     <Compile Include="Assets\Scripts\PlayerScripts\UnitController.cs" />
+    <Compile Include="Assets\Scripts\UIscripts\ButtonCommandBar.cs" />
     <Compile Include="Assets\Scripts\GeneralUnitScripts\UnitStats.cs" />
     <Compile Include="Assets\AOSFogWar\csFogWar.cs" />
+    <Compile Include="Assets\Scripts\UIscripts\CommandBar.cs" />
     <Compile Include="Assets\Scripts\SectorScripts\sectorManager.cs" />
     <Compile Include="Assets\QuickOutline\Scripts\Outline.cs" />
+    <Compile Include="Assets\Scripts\StructureScritps\Barracks.cs" />
     <Compile Include="Assets\Scripts\GeneralUnitScripts\UnitOutline.cs" />
     <Compile Include="Assets\Scripts\PlayerScripts\devToolScript.cs" />
     <Compile Include="Assets\RTS_Camera\Scripts\RTS_Camera.cs" />
